# TicketMaster

./: .gitignore  Dockerfile.client  Dockerfile.worker  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  upload_file.py
api/: app.py  departments.py  ticket.py  upload.py
api/models/: DepartmentResponse.py  TicketRequest.py  TicketSuccess.py  UploadSuccess.py
data/: employees_data.csv  employees_data_old.csv
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/pages/: __init__.py  tickets.py  upload.py
frontend/utils/: __init__.py  api_client.py  styles.py
worker/: client.py  worker.py
worker/data_transformation/: create_embeddings.py  failure_notification.py  process_file.py  send_notification.py  store_embeddings.py
worker/query_transformation/: failure_notification.py  generate_answer.py  metadata_extractor.py  query_parser.py  retrieve_chunks.py  send_notification.py
